--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.7",
     "react": "18.0.0",
-    "react-native": "0.69.3"
+    "react-hook-form": "^7.34.0",
+    "react-native": "0.69.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
