--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^2.9.7",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "date-fns": "^2.29.1",
     "react": "18.0.0",
     "react-hook-form": "^7.34.0",
     "react-native": "0.69.3",
