--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.69.3",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-select-dropdown": "^2.0.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
